Trabajo terminado y listo para entregar, elimine redundancia de funciones y todo funciona
